--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="jquery-2.1.4.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preloader</title>
+    <title>Preloader - NotDiamondZ</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
